# robotics-assignment

./: Final_Documentation.md  README.md  ROS2_SETUP_GUIDE.md  Robotics Documentation.docx  Sort-a-bot Plan_.docx  Sort-a-bot_Documentation.docx  Sort-a-bot_Final_Documentation.docx  Sort-a-bot_Presentation.pptx  bin_manager.py  dumbbell_driver.py  dumbbell_spawner.py  final_dumbbell.urdf  generate_docx.py  install_ros2.ps1  package.xml  setup.py  sortabot.world  verify_robot.py  visualize_robot.bat
launch/: sortabot.launch.py  spawn_robots.launch.py
models/: sortabot.sdf
sortabot/: action_server.py  bin_manager_gazebo.py  dumbbell_driver.py  dumbbell_spawner.py  sortabot_vision.py  world_manager.py
sortabot_actions/: CMakeLists.txt  package.xml
sortabot_actions/action/: DepositObject.action  Explore.action  GoTo.action  GraspObject.action  MarkLocation.action  WeighObject.action
sortabot_actions/scripts/: SortabotNav.py  action_server.py  bin_manager.py  convert_to_numpy.py  drive_robot_numpy.py  drive_robot_with_rl.py  lidar_navigator.py  local_rl_inference.py  sortabot_env.py  sortabot_gym.py  test_imports.py  train_rl.py
sortabot_actions/scripts/ppo_sortabot_log/PPO_1/: events.out.tfevents.1770221037.JoachimAsus.28740.0
sortabot_description/: CMakeLists.txt  package.xml
sortabot_description/launch/: display.launch.py  gazebo.launch.py
sortabot_description/rviz/: urdf_config.rviz
sortabot_description/urdf/: materials.xacro  sortabot.urdf.xacro  sortabot_arms.xacro  sortabot_base.xacro  sortabot_sensors.xacro
sortabot_simulation/: generate_world.py  package.xml  setup.py
sortabot_simulation/launch/: sortabot.launch.py  spawn_robots.launch.py
sortabot_simulation/models/: childabot.sdf  dumbbell.urdf.xacro  sortabot.sdf
sortabot_simulation/sortabot_simulation/: childabot.py  convert_urdf.py  robot_controller.py  world_manager.py
sortabot_simulation/worlds/: sortabot.world
urdf/: bins.urdf  materials.xacro  sortabot.urdf.xacro  sortabot_base.xacro
