<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sortabot_actions</name>
  <version>0.0.1</version>
  <description>Action server and RL logic for Sort-a-bot</description>
  <maintainer email="joachim@todo.todo">Joachim</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rosidl_default_generators</depend>
  <depend>action_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type> <!-- Changed to ament_cmake to support custom action generation easily or keep python but use rosidl -->
  </export>
</package>
